--- a/AUTHORS
+++ b/AUTHORS
@@ -1,5 +1,5 @@
 # This file lists all individuals having contributed content to the repository.
 # For how it is generated, see `hack/generate-authors.sh`.
 
-Gbemi Jacob Adebayo <adebayo_gbemi@yahoo.com>
-Elo Agbawe Idiodi <eloagbawe@gmail.com>
+Sulaimon Mojeed <sulaimonmojeed14@gmail.com>
+Oluwayemisi Okunade
